--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 *, ::after, ::before {
     box-sizing: border-box;
 }
-:root {
+/* :root {
     --primary-text-color: #212121;
     --p-text-color: #757575;
     --accent-color: #2196F3;
@@ -12,14 +12,9 @@
     --white-color: #FFFFFF;
     --black-color: #000000;
     --button-color: #F5F4FA;
-}
+} */
 
-body {
-    background-color: var(--main-backgroud-color);
-    color: var(--primary-text-color);
-    font-family: 'Roboto', sans-serif;
-    letter-spacing: 0.03em;
-}
+
 /* General rules */
 h1,
 h2,
@@ -466,9 +461,7 @@ p {color: var(--p-text-color);}
     align-items: center;
     justify-content: center;
 }
-.feature-icon {
-    
-}
+
 .section-title,
 .section2-title {
     font-size: 36px;
@@ -696,9 +689,7 @@ p {color: var(--p-text-color);}
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(100%);
 }
-.project-overlay {
-    
-}
+
 .project-image:hover .project-text,
 .project-image:focus .project-text {
     opacity: 1;
@@ -887,10 +878,6 @@ label {
     border-radius: 4px;
     border: none;
     cursor: pointer;
-}
-.footer-button:hover,
-.footer-button:focus {
-   
 }
 .send {
     margin-left: 10px;
