--- a/sass/layouts/_peculiarities.scss
+++ b/sass/layouts/_peculiarities.scss
@@ -1,8 +1,8 @@
-.section {
+.benefits {
     padding-top: 94px;
 }
 
-.peculiarities.list {
+.benefits__list {
     display: flex;
     flex-wrap: wrap;
 }
