--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -1,6 +1,10 @@
 .work {
     display: block;
-    padding-top: 0;
+    padding-top: 94px;
+    &__title {
+        @include font (700, 36px,1.17, 0.03);
+        text-align: center;
+    }
     &__list {
         display: flex;
         justify-content: space-between;
