--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,14 +1,8 @@
-.hero-title {
-    margin-bottom: 30px;
-    @include font (900, 44px, 1.36, 0.06);
-    text-transform: uppercase;
-    color: $white-color;
-}
 .section-title {
     @include font (null,36px, 1.17, null);
     text-align: center;
 }
-.team__title {
+.team-title {
     margin-bottom: 50px;
 }
 .section-title {
