--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -7,22 +7,28 @@
     margin-right: auto;
     background-color: $dark-backgroud-color;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/new-foto\ .jpg);
+    &__title {
+        margin-bottom: 30px;
+        @include font (900, 44px, 1.36, 0.06);
+        text-transform: uppercase;
+        color: $white-color;
+    }
+    &__button {
+        display: block;
+        margin: 0 auto;
+        padding: 10px 32px;
+        background-color: $accent-color;
+        color: $white-color;
+        @include font (700, 16px, 1.88, 0.06);
+        border-color: $accent-color;
+        border-radius: 4px;
+        border: none;
+        cursor: pointer;
+            &:hover, 
+            &:focus {
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            }
+    }
 }
-.hero-button {
-    display: block;
-    margin: 0 auto;
-    padding: 10px 32px;
 
-    background-color: $accent-color;
-    color: $white-color;
-    @include font (700, 16px, 1.88, 0.06);
-    border-color: $accent-color;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-        &:hover, 
-        &:focus {
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        }
-}
 
