--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -1,6 +1,6 @@
 .work {
     display: block;
-    padding-top: 94px;
+    padding-top: 0;
     &__title {
         @include font (700, 36px,1.17, 0.03);
         text-align: center;
