--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -6,9 +6,9 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
-// body {
-//     background-color: var(--main-backgroud-color);
-//     color: var(--primary-text-color);
-//     font-family: 'Roboto', sans-serif;
-//     letter-spacing: 0.03em;
-// }
+body {
+    background-color: $main-backgroud-color;
+    color: $primary-text-color;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.03em;
+}
