--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,32 +1,32 @@
 body {
-    background-color: var(--main-backgroud-color);
-    color: var(--primary-text-color);
+    background-color: $main-backgroud-color;
+    color: $primary-text-color;
     letter-spacing: 0.03em;
 }
 
 /* General rules */
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6,
-// p {
-//     margin-top: 0;
-//     margin-bottom: 0;
-// }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
-// ul {
-//     padding: 0;
-//     margin: 0;
-//     list-style: none;
-// }
+ul {
+     padding: 0;
+     margin: 0;
+     list-style: none;
+}
 
 a {
     text-decoration: none;
-    color: var(--primary-text-color);
+    color: $primary-text-color;
 }
 
 p {
-    color: var(--p-text-color);
+    color: $p-text-color;
 }
