--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -8,20 +8,20 @@
     text-decoration: none;
 }
 
-.logo__header {
+.logo-header {
     color: black;
 }
 .main-nav {
 @extend %list;
 }
-.site-nav {
+.site-nav-list {
 display: flex;
 }
-.site-nav__item:not(:last-child) {
+.site-nav-list .item:not(:last-child) {
 margin-right: 50px;
 }
 
-.site-nav__link {
+.site-nav .site-page {
 position: relative;
 display: block;
 padding-top: 32px;
@@ -36,7 +36,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: $accent-color;
     }
 }
-.site-nav__link.current {
+.site-nav .site-page.current {
 color: $accent-color;
 padding: 32px 0px;
     &::after {
@@ -51,44 +51,42 @@ padding: 32px 0px;
     border-radius: 2px;
     }
 }
-.header__contact {
+.contact {
     display: flex;
     margin-left: auto;
 }
-
-.header__item {
-    @extend %link;
+.contact .item + .item {
+    margin-left: 50px;
+}
+.contact-item {
+    @extend %list;
     padding-top: 32px;
     padding-bottom: 32px;
     color: $p-text-color;
     @include font (500, 14px, 1.14, 0.02);
     text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .header__email:hover &,
-    .header__tel:hover &,
-    .header__item:focus & {
-        color: $accent-color;
-        fill: $accent-color;
-    }
-    .header__contact &+& {
-        margin-left: 50px;
-    }
 }
-.header__icon {
+.button-icon {
     margin-right: 10px;
     fill: $p-text-color;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .header__email:hover &,
-    .header__tel:hover &,
-    .header__item:focus & {
-        color: $accent-color;
-        fill: $accent-color;
-    }
+}
+.item:hover .button-icon,
+.item:hover .contact-item {
+    color: $accent-color;
+    fill: $accent-color;
 }
 
-.header__email,
-.header__tel {
+.contact-item:focus .button-icon,
+.contact-item:focus {
+    color: $accent-color;
+    fill: $accent-color;
+}
+
+.button-item {
     padding-top: 32px;
     padding-bottom: 32px;
     fill: $p-text-color;
 }
+
