--- a/sass/layouts/_peculiarities.scss
+++ b/sass/layouts/_peculiarities.scss
@@ -8,7 +8,7 @@
     width: 270px;
     }
     &__image {
-    @extend %link;
+    @extend %list;
     content: "";
     height: 120px;
     border-radius: 4px;
