--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@
 
 @import './layouts/header';
 @import './layouts/hero';
-@import './layouts/peculiarities';
+@import './layouts/benefits';
 @import './layouts/work';
 @import './layouts/team';
 @import './layouts/clients';
