--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -8,31 +8,30 @@
     &__list {
         display: flex;
     }
-}
-
-.team__member {
-    padding-bottom: 30px;
-    background-color: $white-color;
-    width: 270px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    & .team__name {
+    &__member {
+        padding-bottom: 30px;
+        background-color: $white-color;
+        width: 270px;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+        .team__list &+& {
+        margin-left: 30px;
+        } 
+    }
+    &__name {
         margin-top: 30px;
         margin-bottom: 10px;
         @include font (500, 16px, 1.19, null);
         text-align: center;
     }
     
-    & .team__position {
+    &__position {
         @include font (null, 16px, 1.19, null);
         text-align: center;
         margin-bottom: 16px;
-    }
-    
-    .team__list &+& {
-    margin-left: 30px;
+    }   
 }
-}
+
 .member__list {
     display: flex;
     justify-content: center;
@@ -56,7 +55,6 @@
         background-color: $accent-color;
     }
 }
-
 .member__icon {
     fill: #AFB1B8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
